# system-monitor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  error.rs  main.rs
src/collectors/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs  system.rs
src/themes/: mod.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
src/ui/widgets/: mod.rs
